# sdk

./: .gitignore  CMakeLists.txt  README.md  Rakefile  tmp_for_build
code/: CMakeLists.txt
code/include/onyx/cms/: content_manager.h  content_node.h  download_db.h
code/include/onyx/data/: configuration.h  data_tags.h  sketch_proxy.h
code/include/onyx/dictionary/: dict_widget.h  onyx_dict_frame.h
code/include/onyx/sys/: platform.h  service_conf.h  sys_conf.h  sys_status.h  wifi_conf.h  wpa_connection.h  wpa_connection_manager.h
code/include/onyx/ui/: browser_navigation_actions.h  main_window.h  onyx_dialog.h  onyx_keyboard.h  onyx_notes_dialog.h  onyx_search_dialog.h  power_management_dialog.h  sketch_actions.h  status_bar.h  status_bar_item.h  status_bar_item_slide.h  status_bar_item_viewport.h  text_browser.h  ui_global.h  ui_utils.h  volume_control.h
code/include/onyx/wireless/: ap_item.h  wifi_dialog.h
code/src/: CMakeLists.txt  CMakeLists.txt~
code/src/base/: CMakeLists.txt
code/src/cms/: CMakeLists.txt  content_manager.cpp  content_node.cpp  download_db.cpp
code/src/data/: CMakeLists.txt  handwriting_widget.cpp  sketch_graphic_context.cpp  sketch_proxy.cpp
code/src/dictionary/: CMakeLists.txt  dict_frame.cpp  dict_widget.cpp  onyx_dict_frame.cpp
code/src/screen/: CMakeLists.txt  screen_proxy.cpp
code/src/sound/: CMakeLists.txt
code/src/sys/: CMakeLists.txt  page_turning_conf.cpp  platform.cpp  service_conf.cpp  sys_conf.cpp  sys_status.cpp  sys_utils.cpp  volume_conf.cpp  wifi_conf.cpp  wpa_connection.cpp  wpa_connection_manager.cpp
code/src/touch/: CMakeLists.txt
code/src/tts/: tts_widget.cpp
code/src/ui/: browser_navigation_actions.cpp  bulgarian_keyboard_data.cpp  catalog_view.cpp  clock_dialog.cpp  content_view.cpp  czech_keyboard_data.cpp  english_keyboard_data.cpp  font_family_actions.cpp  french_keyboard_data.cpp  georgian_keyboard_data.cpp  german_keyboard_data.cpp  hebrew_keyboard_data.cpp  keyboard_data.cpp  keyboard_data_factory.cpp  main_window.cpp  number_dialog.cpp  onyx_dialog.cpp  onyx_handwriting_widget.cpp  onyx_keyboard.cpp  onyx_keyboard_dialog.cpp  onyx_keyboard_language_dialog.cpp  onyx_notes_dialog.cpp  onyx_password_dialog.cpp  onyx_search_dialog.cpp  onyx_ui_images.qrc  polish_keyboard_data.cpp  power_management_dialog.cpp  reading_style_actions.cpp  reading_tools_actions.cpp  russian_keyboard_data.cpp  screen_rotation_dialog.cpp  sketch_actions.cpp  status_bar.cpp  status_bar_item_clock.cpp  status_bar_item_music_player.cpp  status_bar_item_power.cpp  status_bar_item_slide.cpp  status_bar_item_viewport.cpp  swedish_keyboard_data.cpp  system_actions.cpp  (+4 more)
code/src/wireless/: CMakeLists.txt  ap_conf_dialog.cpp  ap_item.cpp  dialup_dialog.cpp  wifi_dialog.cpp
code/src/wpa/: CMakeLists.txt
code/tests/cms/: CMakeLists.txt  content_manager_unittest.cpp
